--- a/templates/search.html
+++ b/templates/search.html
@@ -171,12 +171,14 @@ max-width: 40%;
 }
 </style>
 
+{% load static %}
+
 <div class="top-toolbar">
 <nav>
 <a href="#">+You</a>
-<a href="#">Gmail</a>
-<a href="#">Images</a>
-<img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
+<a href="https://mail.google.com/mail/">Gmail</a>
+<a href="https://www.google.pl/imghp?hl">Images</a>
+<img src={% static 'img/Acc.png' %} />
 <a href="#"><button class="signin">Sign In</button></a>
 </nav>
 </div>
