--- a/templates/index.html
+++ b/templates/index.html
@@ -171,18 +171,22 @@ max-width: 40%;
 }
 </style>
 
+{% load static %}
+
 <div class="top-toolbar">
 <nav>
-<a href="#">+You</a>
-<a href="#">Gmail</a>
-<a href="#">Images</a>
+<a href="https://mail.google.com/mail/">Gmail</a>
+<a href="https://www.google.pl/imghp?hl">Images</a>
+<img src= "{% static 'img/Acc.png' %}" alt="..."/>
 <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
 <a href="#"><button class="signin">Sign In</button></a>
 </nav>
 </div>
 <div class="search">
 <div class="logo">
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+        <a href="https://www.google.com">
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+        </a>
 </div>
 <form method="POST" action="search">
         {% csrf_token %}
