--- a/templates/search.html
+++ b/templates/search.html
@@ -178,38 +178,36 @@ max-width: 40%;
 <a href="#">+You</a>
 <a href="https://mail.google.com/mail/">Gmail</a>
 <a href="https://www.google.pl/imghp?hl">Images</a>
-<img src="{% static 'img/Acc.png' %}" alt="..."/>
+{#<img src="{% static 'img/Acc.png' %}" alt="..."/>#}
 <a href="#"><button class="signin">Sign In</button></a>
 </nav>
 </div>
 <div class="search">
-<div class="logo">
-    <a href="https://www.google.com">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
-    </a>
-</div>
-<form method="POST" action="search">
-        {% csrf_token %}
-<input class="search-bar" type="text" name="search" autofocus x-webkit-speech/>
-<div class="search-nav">
-<div class="search-button">
-<a href="#"><button type="submit">Google Search</button></a>
-</form>
-<a href="#"><button>I'm Feeling Lucky</button></a>
-</div>
-</div>
+    <div class="logo">
+        <a href="https://www.google.com">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+        </a>
+    </div>
+    <form method="POST" action="search">
+            {% csrf_token %}
+        <input class="search-bar" type="text" name="search" autofocus x-webkit-speech/>
+        <div class="search-nav">
+        <div class="search-button">
+        <a href="#"><button type="submit">Google Search</button></a>
+    </form>
+    <a href="#"><button>I'm Feeling Lucky</button></a>
 </div>
 
 {% if final_result %}
-<b style="padding-left:50px; padding-right: 50ps; color: #646464;">Web Results</b>
-{% for result in final_result %}
-<div style="padding-left:50px; padding-right: 50ps;">
-    <h3 style="color: blue;"><a href='{{ result.1 }}'>{{ result.0 }}</a></h3>
-    <h3 style="color: green;">{{ result.1 }}</h3>
-    <h3>{{ result.2 }}</h3>
+    <b style="padding-left:50px; padding-right: 50ps; color: #646464;">Web Results</b>
+    {% for result in final_result %}
+    <div style="padding-left:50px; padding-right: 50ps;">
+        <h3 style="color: blue;"><a href='{{ result.1 }}'>{{ result.0 }}</a></h3>
+        <h3 style="color: green;">{{ result.1 }}</h3>
+        <h3>{{ result.2 }}</h3>
 
-</div><br><br><br>
-{% endfor %}
+    </div><br><br><br>
+    {% endfor %}
 {% endif %}
 
 
